--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: kancor-backend
     env: python
     plan: free
+    repo: https://github.com/merinm-cell/Kancor-Project.git
     buildCommand: ""
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
